--- a/index.html
+++ b/index.html
@@ -158,31 +158,40 @@
           <h2 class="img-section-title">Чим займаємося</h2>
           <ul class="img-section-list">
             <li class="img-section-group">
-              <img
-                src="images/img-1.jpeg"
-                alt="програміст працює за робочим столом"
-                width="370"
-                height="294"
-                class="img-section-picture"
-              />
+              <div class="img-position">
+                <img
+                  src="images/img-1.jpeg"
+                  alt="програміст працює за робочим столом"
+                  width="370"
+                  height="294"
+                  class="img-section-picture"
+                />
+                <p class="img-label">Десктопні додатки</p>
+              </div>
             </li>
             <li class="img-section-group">
-              <img
-                src="images/img-2.jpeg"
-                alt="програміст створює дизайн для мобільних додатків"
-                width="370"
-                height="294"
-                class="img-section-picture"
-              />
+              <div class="img-position">
+                <img
+                  src="images/img-2.jpeg"
+                  alt="програміст створює дизайн для мобільних додатків"
+                  width="370"
+                  height="294"
+                  class="img-section-picture"
+                />
+                <p class="img-label">Мобільні додатки</p>
+              </div>
             </li>
             <li class="img-section-group">
-              <img
-                src="images/img-3.jpeg"
-                alt="креативний веб дизайнер"
-                width="370"
-                height="294"
-                class="img-section-picture"
-              />
+              <div class="img-position">
+                <img
+                  src="images/img-3.jpeg"
+                  alt="креативний веб дизайнер"
+                  width="370"
+                  height="294"
+                  class="img-section-picture"
+                />
+                <p class="img-label">Дизайнерські рішення</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -500,7 +509,7 @@
           <p class="basement-soc our-features-title">приєднуйтесь</p>
           <ul class="soc-group">
             <li class="soc-list">
-              <a href="#" class=" link-options basement-social-link">
+              <a href="#" class="link-options basement-social-link">
                 <svg class="social-link-icon" width="20" height="20">
                   <use
                     href="./images/icomoon/symbol-defs.svg#icon-instagram"
@@ -509,7 +518,7 @@
               </a>
             </li>
             <li class="soc-list">
-              <a href="#" class=" link-options basement-social-link">
+              <a href="#" class="link-options basement-social-link">
                 <svg class="social-link-icon" width="20" height="20">
                   <use
                     href="./images/icomoon/symbol-defs.svg#icon-twitter"
@@ -518,7 +527,7 @@
               </a>
             </li>
             <li class="soc-list">
-              <a href="#" class="basement-social-link  link-options ">
+              <a href="#" class="basement-social-link link-options">
                 <svg class="social-link-icon" width="20" height="20">
                   <use
                     href="./images/icomoon/symbol-defs.svg#icon-facebook"
@@ -527,7 +536,7 @@
               </a>
             </li>
             <li class="soc-list">
-              <a href="#" class="basement-social-link  link-options ">
+              <a href="#" class="basement-social-link link-options">
                 <svg class="social-link-icon" width="20" height="20">
                   <use
                     href="./images/icomoon/symbol-defs.svg#icon-linkedin"
