--- a/portfolio.html
+++ b/portfolio.html
@@ -61,8 +61,7 @@
               <svg class="topbar-contacts-icon" width="16" height="12">
                 <use
                   href="./images/icomoon/symbol-defs.svg#icon-mail"
-                ></use>
-                </svg>info@devstudio.com</a
+                ></use></svg>info@devstudio.com</a
             >
           </li>
           <li class="topbar-contacts-group">
@@ -73,8 +72,7 @@
               <svg class="topbar-contacts-icon" width="16" height="12">
                 <use
                   href="./images/icomoon/symbol-defs.svg#icon-tel"
-                ></use>
-              </svg>+38 096 111 11 11</a
+                ></use></svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -105,13 +103,18 @@
           <ul class="porfolio-link-list">
             <li class="porfolio-link-group">
               <a href="#" class="link-options portfolio-links">
-                <img
-                  src="./image-porfolio/img-1.jpeg"
-                  alt="image-porfolio"
-                  width="370"
-                  height="295"
-                  class="porfolio-link-img"
-                />
+                <div class="image-portfolio">
+                  <img
+                    src="./image-porfolio/img-1.jpeg"
+                    alt="image-porfolio"
+                    width="370"
+                    height="295"
+                    class="porfolio-link-img"
+                  />
+                  <div class="image-overlay">
+                    <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  </div>
+                </div>
                 <div class="portfolio-tex-under-img">
                   <h2 class="porfolio-link-title">Технокряк</h2>
                   <p class="porfolio-link-text">Веб-сайт</p>
@@ -285,7 +288,7 @@
           <p class="basement-soc our-features-title">приєднуйтесь</p>
           <ul class="soc-group">
             <li class="soc-list">
-              <a href="#" class=" link-options basement-social-link">
+              <a href="#" class="link-options basement-social-link">
                 <svg class="social-link-icon" width="20" height="20">
                   <use
                     href="./images/icomoon/symbol-defs.svg#icon-instagram"
@@ -294,7 +297,7 @@
               </a>
             </li>
             <li class="soc-list">
-              <a href="#" class=" link-options basement-social-link">
+              <a href="#" class="link-options basement-social-link">
                 <svg class="social-link-icon" width="20" height="20">
                   <use
                     href="./images/icomoon/symbol-defs.svg#icon-twitter"
@@ -303,7 +306,7 @@
               </a>
             </li>
             <li class="soc-list">
-              <a href="#" class="basement-social-link  link-options ">
+              <a href="#" class="basement-social-link link-options">
                 <svg class="social-link-icon" width="20" height="20">
                   <use
                     href="./images/icomoon/symbol-defs.svg#icon-facebook"
@@ -312,7 +315,7 @@
               </a>
             </li>
             <li class="soc-list">
-              <a href="#" class="basement-social-link  link-options ">
+              <a href="#" class="basement-social-link link-options">
                 <svg class="social-link-icon" width="20" height="20">
                   <use
                     href="./images/icomoon/symbol-defs.svg#icon-linkedin"
