--- a/portfolio.html
+++ b/portfolio.html
@@ -34,19 +34,23 @@
           <!-- Навігація по сторінці -->
           <ul class="topbar-navigation-list">
             <li class="topbar-navigation-group">
-              <a href="./index.html" class="link-options topbar-navigation-link"
+              <a
+                href="./index.html"
+                class="link-options topbar-navigation-link hover-transition"
                 >Студія</a
               >
             </li>
             <li class="topbar-navigation-group">
               <a
                 href="./portfolio.html"
-                class="link-options topbar-navigation-link"
+                class="link-options topbar-navigation-link hover-transition"
                 >Портфоліо</a
               >
             </li>
             <li class="topbar-navigation-group">
-              <a href="#" class="link-options topbar-navigation-link"
+              <a
+                href="#"
+                class="link-options topbar-navigation-link hover-transition"
                 >Контакти</a
               >
             </li>
@@ -56,23 +60,23 @@
           <li class="topbar-contacts-group">
             <a
               href="mailto:info@devstudio.com"
-              class="link-options topbar-contacts-link"
+              class="link-options topbar-contacts-link hover-transition"
             >
               <svg class="topbar-contacts-icon" width="16" height="12">
-                <use
-                  href="./images/icomoon/symbol-defs.svg#icon-mail"
-                ></use></svg>info@devstudio.com</a
+                <use href="./images/icomoon/symbol-defs.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="topbar-contacts-group">
             <a
               href="tel:+380961111111"
-              class="link-options topbar-contacts-link"
+              class="link-options topbar-contacts-link hover-transition"
             >
               <svg class="topbar-contacts-icon" width="16" height="12">
-                <use
-                  href="./images/icomoon/symbol-defs.svg#icon-tel"
-                ></use></svg>+38 096 111 11 11</a
+                <use href="./images/icomoon/symbol-defs.svg#icon-tel"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -263,21 +267,21 @@
               <li class="basement-group">
                 <a
                   href="https://goo.gl/maps/L8f5SfHQkq7jRVht7"
-                  class="link-options basement-address"
+                  class="link-options basement-address hover-transition"
                   >м. Київ, пр-т Лесі Українки, 26
                 </a>
               </li>
               <li class="basement-group">
                 <a
                   href="mailto:info@devstudio.com"
-                  class="link-options basement-contacts"
+                  class="link-options basement-contacts hover-transition"
                   >info@devstudio.com
                 </a>
               </li>
               <li class="basement-group">
                 <a
                   href="tel:+380961111111"
-                  class="link-options basement-contacts"
+                  class="link-options basement-contacts hover-transition"
                   >+38 096 111 11 11
                 </a>
               </li>
@@ -288,7 +292,10 @@
           <p class="basement-soc our-features-title">приєднуйтесь</p>
           <ul class="soc-group">
             <li class="soc-list">
-              <a href="#" class="link-options basement-social-link">
+              <a
+                href="#"
+                class="link-options basement-social-link hover-transition"
+              >
                 <svg class="social-link-icon" width="20" height="20">
                   <use
                     href="./images/icomoon/symbol-defs.svg#icon-instagram"
@@ -297,7 +304,10 @@
               </a>
             </li>
             <li class="soc-list">
-              <a href="#" class="link-options basement-social-link">
+              <a
+                href="#"
+                class="link-options basement-social-link hover-transition"
+              >
                 <svg class="social-link-icon" width="20" height="20">
                   <use
                     href="./images/icomoon/symbol-defs.svg#icon-twitter"
@@ -306,7 +316,10 @@
               </a>
             </li>
             <li class="soc-list">
-              <a href="#" class="basement-social-link link-options">
+              <a
+                href="#"
+                class="basement-social-link link-options hover-transition"
+              >
                 <svg class="social-link-icon" width="20" height="20">
                   <use
                     href="./images/icomoon/symbol-defs.svg#icon-facebook"
@@ -315,7 +328,10 @@
               </a>
             </li>
             <li class="soc-list">
-              <a href="#" class="basement-social-link link-options">
+              <a
+                href="#"
+                class="basement-social-link link-options hover-transition"
+              >
                 <svg class="social-link-icon" width="20" height="20">
                   <use
                     href="./images/icomoon/symbol-defs.svg#icon-linkedin"
