--- a/index.html
+++ b/index.html
@@ -221,7 +221,10 @@
                 <p class="our-team-p">Product Designer</p>
                 <ul class="soc-group">
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-instagram"
@@ -230,7 +233,10 @@
                     </a>
                   </li>
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-twitter"
@@ -239,7 +245,10 @@
                     </a>
                   </li>
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-facebook"
@@ -248,7 +257,10 @@
                     </a>
                   </li>
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-linkedin"
@@ -272,7 +284,10 @@
                 <p class="our-team-p">Frontend Developer</p>
                 <ul class="soc-group">
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-instagram"
@@ -281,7 +296,10 @@
                     </a>
                   </li>
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-twitter"
@@ -290,7 +308,10 @@
                     </a>
                   </li>
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-facebook"
@@ -299,7 +320,10 @@
                     </a>
                   </li>
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-linkedin"
@@ -323,7 +347,10 @@
                 <p class="our-team-p">Marketing</p>
                 <ul class="soc-group">
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-instagram"
@@ -332,7 +359,10 @@
                     </a>
                   </li>
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-twitter"
@@ -341,7 +371,10 @@
                     </a>
                   </li>
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-facebook"
@@ -350,7 +383,10 @@
                     </a>
                   </li>
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-linkedin"
@@ -374,7 +410,10 @@
                 <p class="our-team-p">UI Designer</p>
                 <ul class="soc-group">
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-instagram"
@@ -383,7 +422,10 @@
                     </a>
                   </li>
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-twitter"
@@ -392,7 +434,10 @@
                     </a>
                   </li>
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-facebook"
@@ -401,7 +446,10 @@
                     </a>
                   </li>
                   <li class="soc-list">
-                    <a href="#" class="social-link link-options">
+                    <a
+                      href="#"
+                      class="social-link link-options hover-transition"
+                    >
                       <svg class="social-link-icon" width="20" height="20">
                         <use
                           href="./images/icomoon/symbol-defs.svg#icon-linkedin"
@@ -421,7 +469,7 @@
       <h2 class="partners-main-title">Постійні клієнти</h2>
       <ul class="partners-group">
         <li class="partners-list">
-          <a href="#" class="link-options partners-link">
+          <a href="#" class="link-options partners-link hover-transition">
             <svg class="partners-icon" width="106" height="60">
               <use
                 href="./images/icomoon/symbol-defs.svg#icon-client-logo-1"
@@ -430,7 +478,7 @@
           </a>
         </li>
         <li class="partners-list">
-          <a href="#" class="link-options partners-link">
+          <a href="#" class="link-options partners-link hover-transition">
             <svg class="partners-icon" width="106" height="60">
               <use
                 href="./images/icomoon/symbol-defs.svg#icon-client-logo-2"
@@ -439,7 +487,7 @@
           </a>
         </li>
         <li class="partners-list">
-          <a href="#" class="link-options partners-link">
+          <a href="#" class="link-options partners-link hover-transition">
             <svg class="partners-icon" width="106" height="60">
               <use
                 href="./images/icomoon/symbol-defs.svg#icon-client-logo-3"
@@ -448,7 +496,7 @@
           </a>
         </li>
         <li class="partners-list">
-          <a href="#" class="link-options partners-link">
+          <a href="#" class="link-options partners-link hover-transition">
             <svg class="partners-icon" width="106" height="60">
               <use
                 href="./images/icomoon/symbol-defs.svg#icon-client-logo-4"
@@ -457,7 +505,7 @@
           </a>
         </li>
         <li class="partners-list">
-          <a href="#" class="link-options partners-link">
+          <a href="#" class="link-options partners-link hover-transition">
             <svg class="partners-icon" width="106" height="60">
               <use
                 href="./images/icomoon/symbol-defs.svg#icon-client-logo-5"
@@ -466,7 +514,7 @@
           </a>
         </li>
         <li class="partners-list">
-          <a href="#" class="link-options partners-link">
+          <a href="#" class="link-options partners-link hover-transition">
             <svg class="partners-icon" width="106" height="60">
               <use
                 href="./images/icomoon/symbol-defs.svg#icon-client-logo-6"
