--- a/portfolio.html
+++ b/portfolio.html
@@ -89,25 +89,35 @@
           <h1 class="hidden">Портфоліо</h1>
           <ul class="flex-list porfolio-btn-list">
             <li class="porfolio-btn-grop">
-              <button type="button" class="portfolio-btn">Усі</button>
+              <button type="button" class="portfolio-btn hover-transition">
+                Усі
+              </button>
             </li>
             <li class="porfolio-btn-grop">
-              <button type="button" class="portfolio-btn">Веб-сайти</button>
+              <button type="button" class="portfolio-btn hover-transition">
+                Веб-сайти
+              </button>
             </li>
             <li class="porfolio-btn-grop">
-              <button type="button" class="portfolio-btn">Додатки</button>
+              <button type="button" class="portfolio-btn hover-transition">
+                Додатки
+              </button>
             </li>
             <li class="porfolio-btn-grop">
-              <button type="button" class="portfolio-btn">Дизайн</button>
+              <button type="button" class="portfolio-btn hover-transition">
+                Дизайн
+              </button>
             </li>
             <li class="porfolio-btn-grop">
-              <button type="button" class="portfolio-btn">Маркетинг</button>
+              <button type="button" class="portfolio-btn hover-transition">
+                Маркетинг
+              </button>
             </li>
           </ul>
           <ul class="porfolio-link-list">
             <li class="porfolio-link-group">
-              <a href="#" class="link-options portfolio-links">
-                <div class="image-portfolio">
+              <a href="#" class="link-options portfolio-links hover-transition">
+                <div class="image-portfolio hover-transition">
                   <img
                     src="./image-porfolio/img-1.jpeg"
                     alt="image-porfolio"
@@ -115,8 +125,13 @@
                     height="295"
                     class="porfolio-link-img"
                   />
-                  <div class="image-overlay">
-                    <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  <div class="image-overlay hover-transition">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
                   </div>
                 </div>
                 <div class="portfolio-tex-under-img">
@@ -126,7 +141,7 @@
               </a>
             </li>
             <li class="porfolio-link-group">
-              <a href="#" class="link-options portfolio-links">
+              <a href="#" class="link-options portfolio-links hover-transition">
                 <img
                   src="./image-porfolio/img-2.jpeg"
                   alt="image-porfolio"
@@ -143,7 +158,7 @@
               </a>
             </li>
             <li class="porfolio-link-group">
-              <a href="#" class="link-options portfolio-links">
+              <a href="#" class="link-options portfolio-links hover-transition">
                 <img
                   src="./image-porfolio/img-3.jpeg"
                   alt="image-porfolio"
@@ -158,7 +173,7 @@
               </a>
             </li>
             <li class="porfolio-link-group">
-              <a href="#" class="link-options portfolio-links">
+              <a href="#" class="link-options portfolio-links hover-transition">
                 <img
                   src="./image-porfolio/img-4.jpeg"
                   alt="image-porfolio"
@@ -173,7 +188,7 @@
               </a>
             </li>
             <li class="porfolio-link-group">
-              <a href="#" class="link-options portfolio-links">
+              <a href="#" class="link-options portfolio-links hover-transition">
                 <img
                   src="./image-porfolio/img-5.jpeg"
                   alt="image-porfolio"
@@ -188,7 +203,7 @@
               </a>
             </li>
             <li class="porfolio-link-group">
-              <a href="#" class="link-options portfolio-links">
+              <a href="#" class="link-options portfolio-links hover-transition">
                 <img
                   src="./image-porfolio/img-6.jpeg"
                   alt="image-porfolio"
@@ -205,7 +220,7 @@
               </a>
             </li>
             <li class="porfolio-link-group">
-              <a href="#" class="link-options portfolio-links">
+              <a href="#" class="link-options portfolio-links hover-transition">
                 <img
                   src="./image-porfolio/img-7.jpeg"
                   alt="image-porfolio"
@@ -220,7 +235,7 @@
               </a>
             </li>
             <li class="porfolio-link-group">
-              <a href="#" class="link-options portfolio-links">
+              <a href="#" class="link-options portfolio-links hover-transition">
                 <img
                   src="./image-porfolio/img-8.jpeg"
                   alt="image-porfolio"
@@ -235,7 +250,7 @@
               </a>
             </li>
             <li class="porfolio-link-group">
-              <a href="#" class="link-options portfolio-links">
+              <a href="#" class="link-options portfolio-links hover-transition">
                 <img
                   src="./image-porfolio/img-9.jpeg"
                   alt="image-porfolio"
