:after current page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li class="topbar-navigation-group">
               <a
                 href="./index.html"
-                class="link-options topbar-navigation-link hover-transition"
+                class="link-options topbar-navigation-link hover-transition active-main"
                 >Студія</a
               >
             </li>
