--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
             <li class="topbar-navigation-group">
               <a
                 href="./portfolio.html"
-                class="link-options topbar-navigation-link hover-transition"
+                class="link-options topbar-navigation-link hover-transition active-porfolio"
                 >Портфоліо</a
               >
             </li>
