svg  close btn add

--- a/images/icomoon/demo-external-svg.html
+++ b/images/icomoon/demo-external-svg.html
@@ -17,6 +17,11 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
+                <svg class="icon icon-close-btn"><use xlink:href="symbol-defs.svg#icon-close-btn"></use></svg><span class="name"> icon-close-btn</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
                 <svg class="icon icon-client-logo-2"><use xlink:href="symbol-defs.svg#icon-client-logo-2"></use></svg><span class="name"> icon-client-logo-2</span>
             </div>
         </div>
