--- a/index.html
+++ b/index.html
@@ -89,9 +89,14 @@
         <div class="container hero-container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <div class="hero-div-btn">
-            <button type="button" class="hero-button hover-transition">
+            <button type="button" class="hero-button hover-transition" data-modal-open>
               Замовити послугу
             </button>
+            <div class="">
+              <button data-modal-close>
+                
+              </button>
+            </div>
           </div>
         </div>
       </section>
@@ -614,5 +619,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
