--- a/index.html
+++ b/index.html
@@ -89,13 +89,28 @@
         <div class="container hero-container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <div class="hero-div-btn">
-            <button type="button" class="hero-button hover-transition" data-modal-open>
+            <button
+              type="button"
+              class="hero-button hover-transition"
+              data-modal-open
+            >
               Замовити послугу
             </button>
-            <div class="">
-              <button data-modal-close>
-                
-              </button>
+            <div class="backdrop is-hidden" data-modal>
+              <div class="modal-window">
+                <p>тест текста в модальному вікні</p>
+                <button
+                  type="button"
+                  class="close-button"
+                  data-modal-close
+                >
+                  <svg class="modal-icon" width="11" height="11">
+                    <use
+                      href="./images/icomoon/symbol-defs.svg#icon-close-btn"
+                    ></use>
+                  </svg>+
+                </button>
+              </div>
             </div>
           </div>
         </div>
