--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
             </button>
             <div class="backdrop is-hidden" data-modal>
               <div class="modal-window">
-                <p>тест текста в модальному вікні</p>
                 <button
                   type="button"
                   class="close-button"
@@ -108,7 +107,7 @@
                     <use
                       href="./images/icomoon/symbol-defs.svg#icon-close-btn"
                     ></use>
-                  </svg>+
+                  </svg>
                 </button>
               </div>
             </div>
